--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -11,16 +12,24 @@ body {
 }
 
 #container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
-    justify-content: space-evenly;
+    -webkit-box-pack: space-around;
+    -ms-flex-pack: space-around;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     min-height: 100vh;
     min-width: 100vw;
     background: url('/img/75.jpg') center center;
     background-size: cover;
     position: relative;
-    padding: 40px 0;
 }
 
 header, main {
@@ -63,6 +72,7 @@ header, main {
     border: 3px solid white;
     border-radius: 5px;
     color: white;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 }
 
@@ -88,6 +98,7 @@ header, main {
     background-color: #64dd17;
     border: 1px solid transparent;
     border-radius: 5px;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     font-size: 3vh;
     font-weight: 500;
@@ -97,6 +108,8 @@ header, main {
 
 .form__button:active {
     background-color: #1faa00;
+    -webkit-transition: background-color 0.3s;
+    -o-transition: background-color 0.3s;
     transition: background-color 0.3s;
 }
 
@@ -122,11 +135,35 @@ header, main {
     position: absolute;
     top: 0;
     left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 100%;
     width: 100%;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     text-align: center;
     font-size: 5vh;
+}
+
+.page__refresh {
+    position: fixed;
+    top: -2vh;
+    left: 0;
+    width: 100vw;
+    font-size: 2vh;
+    background: darkblue;
+    text-align: center;
+    padding: 20px;
+    opacity: 0;
+    transition: transform .3s linear;
+}
+
+.refresh--visible {
+    opacity: 1;
+    transform: translateY(2vh);
 }
