--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,15 @@ body {
     color: white;
 }
 
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
 #container {
     display: -webkit-box;
     display: -ms-flexbox;
