--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,9 +28,9 @@ input::-webkit-inner-spin-button {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: space-around;
-    -ms-flex-pack: space-around;
-    justify-content: space-around;
+    -webkit-box-pack: flex-start;
+    -ms-flex-pack: flex-start;
+    justify-content: flex-start;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -49,12 +49,20 @@ header, main {
 
 .form__wrapper {
     position: relative;
+    margin-top: 5vh;
 }
 
 .form__logo {
     background: url('/img/logo.svg') no-repeat center;
     width: 100%;
     height: 16vh;
+    margin-top: 10vh;
+}
+
+.form__row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
 }
 
 .form__fields {
@@ -67,8 +75,13 @@ header, main {
     margin-bottom: 30px;
 }
 
-.form__field:last-child {
-    margin: 60px 0 0;
+.form__row .form__field {
+    width: 100%;
+    margin: 0;
+}
+
+.form__row .form__field:last-child {
+    margin: 0 0 0 40px;
 }
 
 .form__field input {
@@ -89,12 +102,6 @@ header, main {
     display: inline-block;
     margin-bottom: 15px;
     color: white;
-}
-
-
-.form__actions {
-    padding: 20px;
-    overflow: hidden;
 }
 
 .form__button {
