--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,7 @@ input::-webkit-inner-spin-button {
     -ms-flex-align: center;
     align-items: center;
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 320px;
     background: url('/img/75.jpg') center center;
     background-size: cover;
     position: relative;
@@ -104,10 +104,50 @@ header, main {
     color: white;
 }
 
+.input-group {
+    position: relative;
+    display: table;
+    border-collapse: separate;
+    width: 100%;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+}
+
+.input-group-addon {
+    width: 1%;
+    white-space: nowrap;
+    display: table-cell;
+    border: 3px solid white;
+    padding: 0 10px;
+    background: rgba(0,0,0,.4);
+}
+
+.input-group .form__input {
+    position: relative;
+    z-index: 2;
+    display: table-cell;
+    box-shadow: none;
+}
+
+.input-group .form__input:focus {
+    outline: none;
+}
+
+.prefix .input-group-addon {
+    border-radius: 5px 0 0 5px;
+    border-right: 1px;
+    padding-right: 0;
+}
+
+.prefix .form__input {
+    border-left: 0;
+    border-radius: 0 5px 5px 0;
+    padding-left: 0;
+}
+
 .form__button {
     color: white;
     width: 100%;
-    max-width: 400px;
     height: 8vh;
     padding: 0 20px;
     background-color: #64dd17;
@@ -117,7 +157,6 @@ header, main {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     font-size: 3vh;
     font-weight: 500;
-    float: right;
     text-transform: uppercase;
 }
 
