--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,16 +47,28 @@ header, main {
     padding: 0 40px;
 }
 
+h1,h2,h3,h4,h5,h6 {
+    font-weight: normal;
+    font-size: 4vw;
+    line-height: 1.7;
+}
+
 .form__wrapper {
     position: relative;
     margin-top: 5vh;
 }
 
-.form__logo {
-    background: url('/img/logo.svg') no-repeat center;
-    width: 100%;
-    height: 16vh;
-    margin-top: 10vh;
+.form__header {
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 8vh;
+}
+
+.form__header .amocrm__logo {
+    display: inline-block;
+    height: 4vw;
+    width: 20vw;
+    background: url('/img/amocrm-logo.svg') no-repeat center;
 }
 
 .form__row {
