--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@ header, main {
 
 h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
-    font-size: 4vw;
+    font-size: 4vh;
     line-height: 1.7;
 }
 
@@ -66,8 +66,8 @@ h1,h2,h3,h4,h5,h6 {
 
 .form__header .amocrm__logo {
     display: inline-block;
-    height: 4vw;
-    width: 20vw;
+    height: 4vh;
+    width: 20vh;
     background: url('/img/amocrm-logo.svg') no-repeat center;
 }
 
